--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Odin Recipes</title>
   </head>
   <body>
@@ -12,7 +13,9 @@
         <a href="./recipes/mediterranean-salmon.html">Mediterranean Salmon</a>
       </li>
       <li><a href="recipes/baked-kale-chips.html">Baked Kale Chips</a></li>
-    <li><a href="recipes/blueberry-muffin-bars.html">Blueberry Muffin Bars</a></li>
+      <li>
+        <a href="recipes/blueberry-muffin-bars.html">Blueberry Muffin Bars</a>
+      </li>
     </ul>
   </body>
 </html>
