--- a/recipes/baked-kale-chips.html
+++ b/recipes/baked-kale-chips.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../style.css" />
     <title>Baked Kale Chips</title>
   </head>
   <body>
@@ -12,44 +13,51 @@
       src="https://www.allrecipes.com/thmb/WhgSdf9FhCrgkwaJKpyH_oDgtFE=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/176957-baked-kale-chips-DDMFS-4x3-40fcece9965d47278e7f590304d6861c.jpg"
       alt="baked kale chips in a bowl"
     />
-    <h2>Description</h2>
-    <p>
-      Imagine being able to munch as many crunchy snacks as you want while
-      you're binging that show you love and feeling great about it! That's the
-      beauty of these homemade baked kale chips. Made by quickly tossing
-      together three simple ingredients — fresh kale, olive oil, and flaked sea
-      salt — and baked low and slow for only 20 minutes, these crispy kale chips
-      are easy to make, there are no mystery additives, and even fussy eaters
-      snap them up.
-    </p>
-    <h2>Ingredients</h2>
-    <ul>
-      <li>1 bunch kale</li>
-      <li>1 tablespoon olive oil</li>
-      <li>1 teaspoon flaked sea salt</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-        <li>Gather all ingredients.
+    <div>
+      <h2>Description</h2>
+      <p>
+        Imagine being able to munch as many crunchy snacks as you want while
+        you're binging that show you love and feeling great about it! That's the
+        beauty of these homemade baked kale chips. Made by quickly tossing
+        together three simple ingredients — fresh kale, olive oil, and flaked
+        sea salt — and baked low and slow for only 20 minutes, these crispy kale
+        chips are easy to make, there are no mystery additives, and even fussy
+        eaters snap them up.
+      </p>
+    </div>
+    <div>
+      <h2>Ingredients</h2>
+      <ul>
+        <li>1 bunch kale</li>
+        <li>1 tablespoon olive oil</li>
+        <li>1 teaspoon flaked sea salt</li>
+      </ul>
+    </div>
+    <div>
+      <h2>Steps</h2>
+      <ol>
+        <li>Gather all ingredients.</li>
+        <li>
+          Preheat the oven to 300 degrees F (150 degrees C). Line a rimmed
+          baking sheet with parchment paper.
+        </li>
 
-</li>
-<li>Preheat the oven to 300 degrees F (150 degrees C). Line a rimmed baking sheet with parchment paper.
-
-</li>
-
-<li>Remove kale leaves carefully from thick stems using a knife or kitchen shears; tear into bite-sized pieces.
-
-</li>
-<li>Wash and thoroughly dry kale with a salad spinner.</li>
-<li>Drizzle kale leaves with olive oil; toss to coat. Spread leaves in an even layer on the prepared baking sheet without overlapping; sprinkle with salt.
-
-</li>
-<li>Bake in the preheated oven until edges start to brown but are not burnt, 20 to 30 minutes.
-
-</li>
-<li>Enjoy!
-
-</li>
-    </ol>
+        <li>
+          Remove kale leaves carefully from thick stems using a knife or kitchen
+          shears; tear into bite-sized pieces.
+        </li>
+        <li>Wash and thoroughly dry kale with a salad spinner.</li>
+        <li>
+          Drizzle kale leaves with olive oil; toss to coat. Spread leaves in an
+          even layer on the prepared baking sheet without overlapping; sprinkle
+          with salt.
+        </li>
+        <li>
+          Bake in the preheated oven until edges start to brown but are not
+          burnt, 20 to 30 minutes.
+        </li>
+        <li>Enjoy!</li>
+      </ol>
+    </div>
   </body>
 </html>
