--- a/recipes/blueberry-muffin-bars.html
+++ b/recipes/blueberry-muffin-bars.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../style.css">
     <title>Blueberry Muffin Bars</title>
   </head>
   <body>
@@ -12,61 +13,68 @@
       src="https://www.allrecipes.com/thmb/JNdGF4j1Gf29ddmeNPrG25CIomg=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/11857303-Blueberry-Muffin-Bars-PICS-Beauty-4x3-2bd7fdfb107a49829098fcb152b42d03.jpg"
       alt="blueberry muffin bar sitting on a plate with a fork"
     />
-    <h2>Description</h2>
-    <p>
-      These blueberry muffin bars are full of blueberries and topped with a
-      delicious streusel topping. They have the best qualities of a muffin and a
-      dessert bar.
-    </p>
-    <h2>Ingredients</h2>
-    <ul>
-      <li>3/4 cup rolled oats</li>
-      <li>1/2 cup all purpose flour</li>
-      <li>1/2 cup packed brown sugar</li>
-      <li>1 teaspoon ground cinnamon</li>
-      <li>1/2 cup cold butter, cubed</li>
-      <li>2 1/4 cups all purpose flour</li>
-      <li>1 tablespoon baking powder</li>
-      <li>1 teaspoon baking soda</li>
-      <li>1/2 teaspoon salt</li>
-      <li>3/4 cup white sugar</li>
-      <li>1/2 cup vegetable oil</li>
-      <li>3/4 cup milk</li>
-      <li>2 large eggs</li>
-      <li>2 teaspoons vanilla extract</li>
-      <li>2 cups fresh or frozen blueberries</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-      <li>
-        Gather all ingredients. Preheat the oven to 350 degrees F (175 degrees
-        C). Lightly grease a 10x15-inch baking pan with cooking spray.
-      </li>
-      <li>
-        Prepare oat streusel topping: stir oats, flour, brown sugar, and
-        cinnamon together in a large bowl. Cut in butter with a pastry blender
-        until the mixture is crumbly. Set aside.
-      </li>
-      <li>
-        For bars. whisk flour, baking powder, baking soda, and salt together in
-        a bowl.
-      </li>
-      <li>
-        Whisk together white sugar and oil in a large bowl until well combined.
-        Whisk in milk, eggs, and vanilla extract.
-      </li>
-      <li>Stir flour mixture into egg mixture until just combined.</li>
-      <li>Gently fold in blueberries.</li>
-      <li>Spread batter evenly into the prepared pan.</li>
-      <li>Sprinkle streusel topping evenly over batter.</li>
-      <li>
-        Bake in the preheated oven until a toothpick inserted into the center
-        comes out clean, 25 to 28 minutes.
-      </li>
-      <li>
-        Let bars cool in the pan on a wire rack 20 to 30 minutes before slicing
-        and serving
-      </li>
-    </ol>
+
+    <div>
+      <h2>Description</h2>
+      <p>
+        These blueberry muffin bars are full of blueberries and topped with a
+        delicious streusel topping. They have the best qualities of a muffin and
+        a dessert bar.
+      </p>
+    </div>
+    <div>
+      <h2>Ingredients</h2>
+      <ul>
+        <li>3/4 cup rolled oats</li>
+        <li>1/2 cup all purpose flour</li>
+        <li>1/2 cup packed brown sugar</li>
+        <li>1 teaspoon ground cinnamon</li>
+        <li>1/2 cup cold butter, cubed</li>
+        <li>2 1/4 cups all purpose flour</li>
+        <li>1 tablespoon baking powder</li>
+        <li>1 teaspoon baking soda</li>
+        <li>1/2 teaspoon salt</li>
+        <li>3/4 cup white sugar</li>
+        <li>1/2 cup vegetable oil</li>
+        <li>3/4 cup milk</li>
+        <li>2 large eggs</li>
+        <li>2 teaspoons vanilla extract</li>
+        <li>2 cups fresh or frozen blueberries</li>
+      </ul>
+    </div>
+    <div>
+      <h2>Steps</h2>
+      <ol>
+        <li>
+          Gather all ingredients. Preheat the oven to 350 degrees F (175 degrees
+          C). Lightly grease a 10x15-inch baking pan with cooking spray.
+        </li>
+        <li>
+          Prepare oat streusel topping: stir oats, flour, brown sugar, and
+          cinnamon together in a large bowl. Cut in butter with a pastry blender
+          until the mixture is crumbly. Set aside.
+        </li>
+        <li>
+          For bars. whisk flour, baking powder, baking soda, and salt together
+          in a bowl.
+        </li>
+        <li>
+          Whisk together white sugar and oil in a large bowl until well
+          combined. Whisk in milk, eggs, and vanilla extract.
+        </li>
+        <li>Stir flour mixture into egg mixture until just combined.</li>
+        <li>Gently fold in blueberries.</li>
+        <li>Spread batter evenly into the prepared pan.</li>
+        <li>Sprinkle streusel topping evenly over batter.</li>
+        <li>
+          Bake in the preheated oven until a toothpick inserted into the center
+          comes out clean, 25 to 28 minutes.
+        </li>
+        <li>
+          Let bars cool in the pan on a wire rack 20 to 30 minutes before
+          slicing and serving
+        </li>
+      </ol>
+    </div>
   </body>
 </html>
